k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
  namespace: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 80         # expose on 80 inside cluster
    targetPort: 5000
  type: ClusterIP
